--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-	"name": "@uncoder/handwriting",
+	"name": "@uncoder/test",
 	"version": "1.1.1",
 	"description": "打包样本",
 	"main": "dist/index.js",
 	"license": "MIT",
+	"dependencies": {
+		"@babel/runtime": "^7.1.2"
+	},
 	"devDependencies": {
-		"babel-core": "^6.26.0",
-		"babel-plugin-external-helpers": "^6.22.0",
-		"babel-preset-env": "^1.6.1",
-		"babel-preset-react": "^6.24.1",
-		"babel-preset-stage-2": "^6.24.1",
+		"@babel/core": "^7.1.2",
+		"@babel/plugin-proposal-class-properties": "^7.1.0",
+		"@babel/plugin-transform-runtime": "^7.1.0",
+		"@babel/preset-env": "^7.1.0",
+		"@babel/preset-react": "^7.0.0",
 		"less": "^3.0.1",
-		"regenerator": "^0.12.3",
-		"rollup": "^0.56.3",
-		"rollup-plugin-babel": "^3.0.3",
-		"rollup-plugin-commonjs": "^8.3.0",
+		"rollup": "^0.66.6",
+		"rollup-plugin-babel": "^4.0.3",
+		"rollup-plugin-commonjs": "^9.2.0",
 		"rollup-plugin-node-resolve": "^3.0.3",
-		"rollup-plugin-postcss": "^1.3.1"
+		"rollup-plugin-postcss": "^1.6.2"
 	},
 	"scripts": {
 		"build": "rollup -c",
